Server files are ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 ossettings.ini
 server.jar
 logs/*
+.console_history
+airplane.air
+banned-ips.json
+banned-players.json
+bukkit.yml
+cache/
+commands.yml
+eula.txt
+help.yml
+ops.json
+paper.yml
+permissions.yml
+plugins/
+server.properties
+spigot.yml
+tuinity.yml
+usercache.json
+version_history.json
+whitelist.json
+world/
+world_nether/
+world_the_end/
